    - Fix coding error in docbook tool only exercised when using python lxml
    - Recognize two additional GNU compiler header directory options in
      ParseFlags: -iquote and -idirafter.
    - Fix more re patterns that contain \ but not specified as raw strings
      (affects scanners for D, LaTeX, swig)


RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700

  From William Deegan:

    - Fix Issue #3283 - Handle using --config=force in combination with Decider('MD5-timestamp').
      3.0.2 in fix for issue #2980 added that deciders can throw DeciderNeedsNode exception.
      The Configure logic directly calls the decider when using --config=force but wasn't handling
      that exception.  This would yield minimally configure tests using TryLink() not running and
      leaving TypeError Nonetype exception in config.log
    - Fix Issue #3303 - Handle --config=force overwriting the Environment passed into Configure()'s
      Decider and not clearing it when the configure context is completed.
    - Add default paths for yacc tool on windows to include cygwin, mingw, and chocolatey
    - Fix issue #2799 - Fix mingw tool to respect SHCCCOMSTR, SHLINKCOMSTR and LDMODULECOMSTR
    - Fix Issue #3329 - Add support for MS SDK V10.0A (which is commonly installed with VS2017)
    - Fix Issue #3333 - Add support for finding vswhere under 32 bit windows installs.

  From Maciej Kumorek:
    - Update the MSVC tool to include the nologo flag by default in RCFLAGS

From Daniel Moody:
    - Change the default for AppendENVPath to delete_existing=0, so path
      order will not be changed, unless explicitly set (Issue #3276)
    - Fixed bug which threw error when running SCons on windows system with no MSVC installed.
    - Update link tool to convert target to node before accessing node member
    - Update mingw tool to remove MSVC like nologo CCFLAG
    - Add default paths for lex tool on windows to include cygwin, mingw, and chocolatey